list of templates api
