# types/api/projects/template/get.ts
@@ -1,0 +1,6 @@
+import type { paths } from "@/types/api.types";
+
+export type ProjectTemplateGetRequest =
+  paths["/projects/template"]["get"]["parameters"]["query"];
+export type ProjectTemplateGetResponse =
+  paths["/projects/template"]["get"]["responses"]["200"]["content"]["application/json"];
